# Edge-AI-AutoML-Platform-Automated-Model-Optimization-and-Deployment

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci-cd.yml
assets/: Edge AI AutoML Arch Diagram.drawio
dataset/preset/: .gitkeep
docs/: Directory Structure.md  Implementation Workflow.md  System Architecture.md  Tech Stack.md
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ExperimentCard.jsx  Header.jsx  LoadingSpinner.jsx
frontend/src/pages/: CreateExperiment.jsx  ExperimentProgress.jsx  ExperimentResults.jsx  HomePage.jsx  ResultsViewer.jsx
models/custom/tensorflow/random test 2/: large_cifar10_cnn.h5
models/optimized/pt cifar10 optimized/: quantization_aware_training_optimized.pth
models/optimized/pt fashionmnist optimized/: quantization_aware_training_optimized.pth
models/optimized/random test/: hybrid_prune_quantize.pth  pruning_magnitude_structured.pth  pruning_magnitude_unstructured.pth  ptq_int4.pth  ptq_int8.pth  quantization_aware_training.pth
models/optimized/tf cifar10 optimized/: quantization_aware_training_optimized.tflite
models/pretrained/pytorch/: large_cifar100_cnn.pt  large_cifar10_cnn.pt  large_fashionmnist_cnn.pt  large_mnist_cnn.pt  medium_cifar100_cnn.pt  medium_cifar10_cnn.pt  medium_fashionmnist_cnn.pt  medium_mnist_cnn.pt  models_metadata.json  small_cifar100_cnn.pt  small_cifar10_cnn.pt  small_fashionmnist_cnn.pt  small_mnist_cnn.pt
models/pretrained/tensorflow/: large_cifar100_cnn.h5  large_fashionmnist_cnn.h5  large_mnist_cnn.h5  medium_cifar100_cnn.h5  medium_cifar10_cnn.h5  medium_mnist_cnn.h5  models_metadata.json  small_cifar100_cnn.h5  small_cifar10_cnn.h5  small_fashionmnist_cnn.h5  small_mnist_cnn.h5
scripts/: automated_e2e_tests.py  cli_interface.py  create_pretrained_models.py  create_test_datasets.py  quick_failed_tests.py  seed_devices.py  test_app_startup.py  test_experiments_api.py  test_failed_cases.py  test_upload_api.py
src/: __init__.py  config.py  database.py  logging_config.py  main.py  websocket.py
src/api/: __init__.py  experiments.py  optimize.py  performance.py  results.py  upload.py  websocket.py
src/core/: __init__.py  base.py  orchestrator.py  performance_estimator.py  recommendation_engine.py
src/core/pytorch/: __init__.py  distillation.py  hybrid.py  pruning.py  ptq_int4.py  ptq_int8.py  qat.py
src/core/tensorflow/: __init__.py  distillation.py  hybrid.py  pruning.py  ptq_int4.py  ptq_int8.py  qat.py
src/models/: __init__.py  experiment.py  experiment_progress.py  model_file.py  optimization_run.py  recommendation.py
src/schemas/: __init__.py  experiment.py  optimization.py  recommendation.py  result.py  upload.py  websocket.py
src/utils/: __init__.py  dataset_loader.py  error_handler.py  file_handler.py  model_loader.py  validators.py
test_results/: failed_tests_20251125_232950.json  failed_tests_20251126_002451.json  quick_test_20251124_205212.json  quick_test_20251124_212815.json  quick_test_20251124_215719.json  quick_test_20251125_111735.json
tests/: test_models.py
tests/e2e/: test_complete_workflow.py
tests/integration/: test_orchestrator.py  test_performance_api.py
tests/unit/: test_distillation_pytorch.py  test_distillation_tensorflow.py  test_hybrid_pytorch.py  test_hybrid_tensorflow.py  test_performance_estimator.py  test_pruning_pytorch.py  test_pruning_tensorflow.py  test_ptq_int4_pytorch.py  test_ptq_int4_tensorflow.py  test_ptq_int8_pytorch.py  test_ptq_int8_tensorflow.py  test_qat_pytorch.py  test_qat_tensorflow.py  test_recommendation_engine.py  test_websocket_connection.py
uploads/49cc69a2-0010-4faa-8944-495236606c94/: medium_mnist_cnn_2.pt
uploads/5b4d6741-26db-4d47-80e2-4757b749725f/: small_cifar10_cnn.pt
uploads/87772af8-b98c-4ef4-891e-a90a4e656679/: medium_cifar10_cnn_2.pt
uploads/9e3adf9c-8685-4d99-9023-521a61faa142/: medium_cifar10_cnn.pt
uploads/ac2b5f4d-42a7-45df-9a54-160f0e3757c2/: medium_cifar10_cnn.h5
