[tool.poetry]
name = "edge-ai-automl-platform"
version = "0.1.0"
description = "Intelligent AutoML Model Optimization Platform for Edge Deployment"
authors = ["Ahmed Ismail Khalid <ahmedik95316@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
tensorflow = "^2.20.0"
tensorflow-model-optimization = "^0.8.0"
keras = "^3.0.0"
numpy = "^1.24.0"
pillow = "^10.1.0"
websockets = "^12.0"
alembic = "^1.13.0"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.1"
ipython = "^8.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.eggs
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "dist",
    "build",
    "scripts",
    "tests",
]

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "UP"]
ignore = [
    "E501",
    "B008",
    "W191",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2
known-first-party = ["src"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
]